--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 \documentclass[conference, a4paper, draft]{IEEEtran}
-
+%
 \usepackage{subscript}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -32,10 +32,10 @@
 
 \maketitle
 
-\begin{abstract}
-  \boldmath
-  \input{abstract}
-\end{abstract}
+%\begin{abstract}
+%  \boldmath
+%  \input{abstract}
+%\\end{abstract}
 
 \IEEEpeerreviewmaketitle
 \IEEEoverridecommandlockouts
