--- a/report/futurework.tex
+++ b/report/futurework.tex
@@ -1,2 +1,11 @@
-\section{Future Work}
+\section{Future Work} \label{sec:fut}
 Jan will write about future work here.
+Jan will write about:\\
+Mehr als eine neue Moye gleichzeitig\\
+implementation als fsm\\
+ausfall von kanten\\
+cluster regroupen\\
+realitaetsnaehe abchecken mit bestehenden wifi protokollen\\
+
+\section{Lessons Learned} \label{sec:les}
+??
