--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[conference, a4paper, draft]{IEEEtran}
+\documentclass[a4paper, draftcls]{IEEEtran} % onecolumn
 %
 \usepackage{subscript}
 \usepackage[T1]{fontenc}
