--- a/report/setting.tex
+++ b/report/setting.tex
@@ -1,5 +1,5 @@
-\section{Setting}
-Dieser Abschnitt beschreibt sowohl das fiktive Anwendungsgebiet, als auch die technische Arbeitsumgebung des Clusterbildungsalgorithmus.
+\section{Setting} \label{sec:set}
+\IEEEPARstart{D}{ieser} Abschnitt beschreibt sowohl das fiktive Anwendungsgebiet, als auch die technische Arbeitsumgebung des Clusterbildungsalgorithmus.
 
 
 
