--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,2 +1,8 @@
 \section{Einleitung} \label{sec:intro}
-Robert und jan schreiben hier \"uber die einleitung
+\IEEEPARstart{D}{ieser} Bericht dokumentiert ein Protokoll zur Bildung von Verb\"anden aus Sensorknoten um Strom zu sparen. Innerhalb der Verb\"ande wird kein Routing ben\"origt, und jedes Miglied des Verbandes kann die Verwaltungsaufgaben \"ubernehmen.
+
+Wir beginnen mit einer weiterf\"uhrenden Beschreibung des Anwendungsszenarios und den getroffenen Annahmen in Abschnitt \ref{sec:setting}.
+Darauf folgt Abschnitt \ref{sec:features} mit der Spezifikation der funktionalen Anforderungen.
+Abschnitt \ref{sec:algo} besch\"aftigt behandelt das entwickelte Protokoll.
+Abschnitt \ref{sec:impl} und \ref{sec:ana} \textbf{beschreibt robert}.
+Als letztes werden in Abschnit \ref{sec:futwork} Ans\"atze in f\"ur zuk\"unftige Arbeit erw\"ahnt, und in Abschnitt \ref{sec:conclusion} ein Fazit gezogen.
