--- a/report/report.tex
+++ b/report/report.tex
@@ -1,19 +1,21 @@
-\documentclass[a4paper, draftcls]{IEEEtran} % onecolumn
+\documentclass[a4paper, draftcls, onecolumn]{IEEEtran} % onecolumn
 %
 \usepackage{subscript}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{pgf}
 \usepackage{tikz}
+\usetikzlibrary{arrows,shadows} % for pgf-umlsd
+\usetikzlibrary{arrows,automata}
+\usepackage{pgf-umlsd}
 \usepackage{fancybox}
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{listings}
 
-\usepackage{pgf}
-\usepackage{tikz}
-\usetikzlibrary{arrows,automata}
+
 
 
 
