--- a/report/setting.tex
+++ b/report/setting.tex
@@ -1,25 +1,29 @@
-\section{Setting} \label{sec:set}
-\IEEEPARstart{D}{ieser} Abschnitt beschreibt sowohl das fiktive Anwendungsgebiet, als auch die technische Arbeitsumgebung des Clusterbildungsalgorithmus.
-
-
+B\section{Setting} \label{sec:setting}
+Dieser Abschnitt beschreibt zuerst das Anwendungsgebiet, und danach die Annahmen die bei dem Design des Protokolles gemacht wurden.
+W\"ahrend des Entwerfens des Protokolles, wurde nicht drauf geachtet das Anwendungszenario realistisch zu gestalten. Weder das Anwendungsszenarion noch Annahmen beruhen auf recherchierten Fakten.
 
 \subsection{Anwendungsgebiet}
-% Wir retten die W\"alder
-\textbf{toller einleitungsparagrapgh hier}
-
 Um Fr\"uhwarnsysteme f\"ur Waldbr\"ande zu verbessern k\"onnten z.B. kleine Sensoren eingesetzt werden, welche sich untereinander vernetzen um so gro\ss e Fl\"achen messen zu k\"onnen.
 In unserem Szenario seien Sensoren gegeben, die neben dem Messen von Metriken die f\"ur die Waldbranderkennung n\"otig sind, auch \"uber zwei Kommunikationsmethoden verf\"ugen. Eine Kommunikationsm\"oglichkeit zur Verst\"andigung mit anderen Sensoren in der unmittelbaren Umgebung, wie zum Beispiel W-Lan, und eine zum Senden der Messergebnisse an eine Senke, wie zum Beispiel GPRS.
-Von nun an, verwenden wir beispielhaft W-Lan f\"ur die Kommunikationmethode von Sensor zu Sensor, und GPRS f\"ur die Kommunikationsmethode von den Sensoren zu der Senke.
+
 Ziel dieses Projektes es nun, Sensoren in \emph{Cluster} zu organiseren.
-Cluster benuzten z.B. W-Lan um dem Sensoren zu erm\"oglichen Batterien zu sparen, indem die Messdaten bei manchen Sensoren gesammelt werden, und so nicht jeder Sensor seine Daten einzeln zu der Senke senden muss.
+Cluster benuzten Kurzstreckenkommunikation um dem Sensoren zu erm\"oglichen Batterien zu sparen, indem die Messdaten bei manchen Sensoren gesammelt werden, und so nicht jeder Sensor seine Daten einzeln zu der Senke senden muss.
 Der Sensor der die Messdaten zur Senke sendet bezeichen wir als \emph{Clusterhead} .
 
+\subsection{Annahmen}
 Die technischen Voraussetzungen f\"ur unseren Ansatz sind die Folgenden:
 \begin{itemize}
-\item Alle Sensoren sind sowohl mit W-Lan als auch mit GPRS ausgestattet.
-\item Die Sensoren gehen einer nach dem anderen an.
-\item Jeder Sensor in einem Cluster sollte Clusterhead werden k\"onnen.
+\item Alle Sensorknoten sind baugleich, d.h. jeder Sensorknoten kann mit anderen Sensorknoten und der Senke kommunizieren.
+\item Keine zwei Sensorknoten versuchen gleichzeitg einem Cluster beizutreten. Dies wird Momentan daruch erreicht, dass alle sich Sensorknoten nacheinander aktivieren.
+\item Sensorknoten bewegen sich nicht.
+\item Keine Ausf\"alle von einzelnen Verbindungen. Ein Sensorknoten erreicht entweder alle Knoten eines Verbandes, oder keine.
+\item Keine tempor\"aren Ausf\"alle. Ein Sensorknoten f\"allt entweder nicht oder komplett aus.
+\item Wenn ein Sensorknoten ausf\"allt, so merken es alle Sensorknoten im Verband gleichzeitig und mit Sicherheit, aber nicht zwingend instantan.
 \end{itemize}
 
-Weiterhin gehen wir davon aus, dass Nachrichten nicht verloren gehen.
-Praktisch kann dies durch z.B. TCP sichergestellt werden.
+\noindent Zus\"atzlich nehmen wir an, dass ein unterliegendes Protokoll existiert, das folgendes garantiert:
+\begin{itemize}
+\item Garantierte Zustellung von Nachrichten
+\item Zustellung der Nachrichten in der richtigen Reihenfolge
+\end{itemize}
+Ein Beispiel hierf\"ur w\"are ein TCP/IP Stack.
