--- a/report/algo.tex
+++ b/report/algo.tex
@@ -1,13 +1,16 @@
-\section{Algorithmen} \label{sec:algo}
+\section{Protokoll} \label{sec:algo}
 Dieser Abschnitt besch\"aftigt sich mit den entwickelten Algorithmen f\"ur das bilden von Clustern, die Ausfallsicherheit, und das Rotieren von Clusterheads.
 
 \subsection{Clusterbildung}
-Die Grundlage des Clusteringalgorithmus ist das Bilden von vollst\"andigen Graphen.
-Die Knoten des Graphen sind die Sensoren, und die Kanten die W-Lan Verbindungen in Reichweite.
-Dadurch reduziert sich die Clusterbildung auf das Cliquenproblem.
+Die Grundlage des Bildes von Clustern ist das Finden von vollst\"andigen Sub-Graphen.
+Die Knoten des Graphen sind die Sensorknoten, und die Kanten die Verbindungen zu anderen Sensorknoten in Reichweite.
+Dadurch reduziert sich die Clusterbildung auf das Cliquenproblem, ist aber aufgrund der getroffenen Annahmen nicht in $NP$.
+
+Motes ordnen sich nach der Aktivierung einem Cluster zu, und verlassen diesen nicht, bis der Cluster sich aufl\"ost. Es werden keine Optimierungen an bestehenden Clustern vorgenommen.
+Siehe Bild \ref{fig:sm} f\"ur die Finite-State-Machine des Protokolls.
 
 Cluster werden durch folgendes Protokol gebildet:
-\begin{itemize}
+\begin{enumerate}
 \item Falls sich ein Sensor aktiviert, so sendet sie zuerst eine Nachricht die nach vorhandenen Clustern sucht. Findest der Sensor keine vorhandenen Cluster, so bildet er selber einen.
 \item Alle schon vorhandenen Clusterheads antworten auf die Anfragen von neuen Motes. Diese Antwort enth\"allt einen Identifikator des Clusters und die Anzahl der Sensoren in dem Cluster.
 \item Der neue Sensor speichert alle Antworten der vorhanden Cluster, ordnet sie nach Gr\"o\ss e und versucht der Reihe nach einem der Cluster beizutreten, beginnend mit dem Kleinsten.
@@ -15,7 +18,9 @@ Cluster werden durch folgendes Protokol gebildet:
 \item Nach dem Ablaufen eines Timeouts, sendet der neue Sensor die Ids aller empfangenen Sensoren an den Clusterhead. Dies stellt sicher, dass der neue Sensor alle schon vorhandenen Mitglieder erreichen kann.
 \item Falls die Nachricht des neuen Sensors alle Ids des aktuellen Clusters entahlten, so sendet der Clusterhead dem neuen Sensor eine Nachricht mit der Best\"atigung, dass er neue Sensor dem Cluster beigetreten ist. Zus\"atzlich ordnet der Clusterhead dem neuen Sensor einen Slot zu. Dieser Slot wird n\"otig, falls der Clusterhead ausf\"allt.
 \item Falls die Nachricht des neuen Sensors nicht alle Ids enthalten sollte, so sendet der Server eine Ablehnung und der Client versucht dem n\"achst gr\"o\ss eren Cluster beizutreten.
-\end{itemize}
+\end{enumerate}
+Bild \ref{fig:sd} ist ein UML-Sequenzdiagram welches einen erfolgreichen Clusterbeitritt mit einem weiterem Sensorknoten illustiert.
+
 
 \begin{figure*}
 \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
@@ -39,9 +44,35 @@ Cluster werden durch folgendes Protokol gebildet:
             edge [bend left=25] node {--/HeadGone} (A);
 \end{tikzpicture}
 \label{fig:sm}
-\caption{State Machine des Cluster Protokolls \textbf{TODO}}
+\caption{State Machine des Cluster Protokolls}
 \end{figure*}
-\subsection{Ausfallsicherheit} \textbf{TODO}
+
+\begin{figure*}
+  \centering
+  \begin{sequencediagram}
+    \tikzstyle{inststyle}+=[node distance=2.0cm] % custom the style
+    \newthread{ch}{ClusterHead}
+    \newthread{new}{New Mote}
+    \newthread{cm}{ClusterMote}
+
+    \begin{sdblock}{Join}{}
+      \begin{call}{new}{WhoIsThere}{ch}{ReWhoIsThere}
+      \end{call}
+
+      \begin{call}{new}{ListMembers}{cm}{ReListMembers}
+      \end{call}
+
+      \begin{call}{new}{Join}{ch}{ReJoin}
+      \end{call}
+    \end{sdblock}
+
+
+  \end{sequencediagram}
+  \caption{Sequenzdiagram f\"ur einen erfolgreichen Clusterbeitritt}
+  \label{fig:sd}
+\end{figure*}
+
+\subsection{Ausfallsicherheit}
 Aufgrund der erw\"ahnten Annahmen (TCP/IP, keine Bewegung der Motes, etc) gibt es nur zwei Ausfallszenarien die betrachtet werden m\"ussen, der Ausfall einer Membermote,  sowie der Ausfall des Clusterheads.
 Falls eine Membermote ausfallen sollte, so muss der zugeh\"orige Clusterhead dies merken und die Liste der zum Cluster zugeh\"origen Motes aktualisieren.
 Da Motes die dem Cluster betreten wollen Kontakt zu allen Motes nachweisen m\"ussen, die der Cluster als zum Cluster zugeh\"orig gespeichert hat, w\"urde der unbemerkte Ausfall einer Mote dazu f\"uhren, dass keine neuen Motes beitreten k\"onnen.
@@ -55,11 +86,9 @@ $b$ berechnet sich durch die upper bound f\"ur das Beitreten einer Mote zu einem
 Der slot ist ein streng monoton ansteigender pro Cluster eindeutiger Integer.
 Somit wird sichergestellt, dass die Membermote alle nacheinander in der urspr\"unglichen Beitrittsreihenfolge versuchen einem neuen Cluster beizutreten.
 
-\subsection{Rotation der Clusterheads} \textbf{TODO}
+\subsection{Rotation der Clusterheads}
 Die Rotation des Clusterhead ist der Prozess welcher von dem aktuellen Clusterhead ausgef\"uhrt wird, und einer Membermote die F\"uhrung des Clusters zuweist.
 Dieser Rotation kann ausgel\"ost werden von z.B. einem timeout oder dem Batteriestand.
 Beider Durchf\"uhrung der Rotation w\"ahlst der Clusterhead der neuen Cluster und sickt alle relevanten Daten an ihn.
 Die gesendeten Daten sind:
-slot\\
-Membermotes\\
-...\\
+Der slot der als n\"achstes vergeben wird, eine Liste der Ids aller Motes in dem Cluster, sowie die Id des Clusters.
