--- a/report/setting.tex
+++ b/report/setting.tex
@@ -16,7 +16,7 @@ Die technischen Voraussetzungen f\"ur unseren Ansatz sind die Folgenden:
 \item Alle Sensorknoten sind baugleich, d.h. jeder Sensorknoten kann mit anderen Sensorknoten und der Senke kommunizieren.
 \item Keine zwei Sensorknoten versuchen gleichzeitg einem Cluster beizutreten. Dies wird Momentan daruch erreicht, dass alle sich Sensorknoten nacheinander aktivieren.
 \item Sensorknoten bewegen sich nicht.
-\item Keine Ausf\"alle von einzelnen Verbindungen. Ein Sensorknoten erreicht entweder alle Knoten eines Verbandes, oder keine.
+\item Keine Ausfälle von einzelnen Verbindungen. Ein Sensorknoten erreicht entweder alle Knoten seines Verbandes, oder keine.
 \item Keine tempor\"aren Ausf\"alle. Ein Sensorknoten f\"allt entweder nicht oder komplett aus.
 \item Wenn ein Sensorknoten ausf\"allt, so merken es alle Sensorknoten im Verband gleichzeitig und mit Sicherheit, aber nicht zwingend instantan.
 \end{itemize}
