--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, draftcls, onecolumn]{IEEEtran} % onecolumn
+\documentclass[a4paper,  onecolumn]{IEEEtran} % onecolumn
 %
 \usepackage{subscript}
 \usepackage[T1]{fontenc}
@@ -23,7 +23,7 @@
 \begin{document}
 
 
-\title{ Report f\"ur SOS}
+\title{Clusterung von Sensorknoten zur Waldbranddektion}
 
 \author{
   \IEEEauthorblockN{Robert Oehlmann, Jan Winkelmann}
